--- a/index.html
+++ b/index.html
@@ -3046,10 +3046,42 @@ body {
   </div>
 </div>
 
-<div id="modalTermosUso" class="modal" onclick="fecharModal(event)"><div class="modal-content" onclick="event.stopPropagation()"><h3>Termos de Uso</h3><p class="scrollable-list">Bem-vindo ao Nova Versão! Ao usar nosso aplicativo, você concorda em seguir nossas regras de conduta, respeitar outros usuários e profissionais, e usar a plataforma para os fins a que se destina. Violações podem resultar na suspensão da conta.</p><button data-modal-id="modalTermosUso" onclick="fecharModal(event)">Fechar</button></div></div>
-<div id="modalTermosPrivacidade" class="modal" onclick="fecharModal(event)"><div class="modal-content" onclick="event.stopPropagation()"><h3>Termos de Privacidade</h3><p class="scrollable-list">Sua privacidade é importante. Coletamos dados como nome, e-mail e localização para fornecer e melhorar nossos serviços. Não compartilhamos seus dados pessoais com terceiros sem seu consentimento, exceto quando exigido por lei.</p><button data-modal-id="modalTermosPrivacidade" onclick="fecharModal(event)">Fechar</button></div></div>
-<div id="modalTermosCookies" class="modal" onclick="fecharModal(event)"><div class="modal-content" onclick="event.stopPropagation()"><h3>Termos de Cookies</h3><p class="scrollable-list">Utilizamos cookies e tecnologias semelhantes para manter sua sessão ativa, lembrar suas preferências e garantir o funcionamento do aplicativo. Ao continuar usando o Nova Versão, você concorda com nosso uso de cookies.</p><button data-modal-id="modalTermosCookies"
-onclick="fecharModal(event)">Fechar</button></div></div>
+<div id="modalTermosUso" class="modal" onclick="fecharModal(event)">
+  <div class="modal-content" onclick="event.stopPropagation()">
+    <h3>Termos de Uso</h3>
+    <p class="scrollable-list">
+      Bem-vindo ao Nova Versão! Ao usar nosso aplicativo, você concorda em seguir nossas regras de conduta, respeitar outros usuários e profissionais, e usar a plataforma para os fins a que se destina. Violações podem resultar na suspensão da conta.
+    </p>
+    <button data-modal-id="modalTermosUso" onclick="fecharModal(event)">Fechar</button>
+  </div>
+</div>
+
+<div id="modalTermosPrivacidade" class="modal" onclick="fecharModal(event)">
+  <div class="modal-content" onclick="event.stopPropagation()">
+    <h3>Termos de Privacidade</h3>
+    <p class="scrollable-list">
+      Sua privacidade é importante. Coletamos dados como nome, e-mail e localização para fornecer e melhorar nossos serviços. Não compartilhamos seus dados pessoais com terceiros sem seu consentimento, exceto quando exigido por lei.
+    </p>
+    
+    <p style="margin-top: 15px; text-align: center;">
+        <a href="/privacidade.html" target="_blank" style="color: var(--cor-destaque); text-decoration: underline; font-weight: bold; font-size: 14px;">
+            Ler Política de Privacidade Completa
+        </a>
+    </p>
+
+    <button data-modal-id="modalTermosPrivacidade" onclick="fecharModal(event)">Fechar</button>
+  </div>
+</div>
+
+<div id="modalTermosCookies" class="modal" onclick="fecharModal(event)">
+  <div class="modal-content" onclick="event.stopPropagation()">
+    <h3>Termos de Cookies</h3>
+    <p class="scrollable-list">
+      Utilizamos cookies e tecnologias semelhantes para manter sua sessão ativa, lembrar suas preferências e garantir o funcionamento do aplicativo. Ao continuar usando o Nova Versão, você concorda com nosso uso de cookies.
+    </p>
+    <button data-modal-id="modalTermosCookies" onclick="fecharModal(event)">Fechar</button>
+  </div>
+</div>
 
 <div id="modalCarteira" class="modal" onclick="fecharModal(event)">
   <div class="modal-content" onclick="event.stopPropagation()">
